--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a1/kmk003.a1.style.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a1/kmk003.a1.style.css
@@ -3,6 +3,12 @@
 	margin-left: 10px;
 }
 
+.setting_header_tab1_2 {
+	width: 60px;
+	margin-left: 10px;
+}
+
+
 .setting_rows {
 	margin-top: 10px;
 	width: 100%;
