--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a9/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a9/index.xhtml
@@ -4,12 +4,17 @@
 	xmlns:com="http://xmlns.jcp.org/jsf/component"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 	
-	<div style="text-align: right;">
-		<button tabindex="131">#{i18n.getText('KMK003_192')}</button>
-	</div>
-	
 	<div class="tab-rows" style="margin-top: 0px;">
-		<div style="width: 180px;" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_94')}</div>		
+		<table style="width: 100%;">
+			<tr>
+				<td>
+					<div style="width: 180px;" data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KMK003_94')}</div>		
+				</td>
+				<td style="width: 30%; text-align: right;">	
+					<button tabindex="131">#{i18n.getText('KMK003_192')}</button>
+				</td>
+			</tr>
+		</table>		
 	</div>
 	
 	<div>		
