--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
@@ -17,11 +17,16 @@
 			<com:scriptfile path="kaf022.a.service.js" />
 			<com:scriptfile path="kaf022.a.start.js" />
 			<com:scriptfile path="../m/kaf022.m.vm.js" /> 
+			<com:scriptfile path="../m/kaf022.m.service.js" /> 
+			<com:stylefile path="../m/kaf022.m.style.css" />
 			<com:scriptfile path="../l/kaf022.l.vm.js" />
 			<com:scriptfile path="../l/kaf022.l.service.js" />
 			<com:scriptfile path="/view/kcp/share/list.js" of="/nts.uk.com.web"/>
 			<!-- <com:scriptfile path="../e/kmf004.e.vm.js" /> 
  			<com:scriptfile path="../e/kmf004.e.service.js" />  -->
+ 			<com:ValidatorScript>
+				nts.uk.shr.com.primitive.Memo
+			</com:ValidatorScript>
 		</ui:define>
 		<ui:define name="sidebar">
 			<div data-bind="with: tabView">
@@ -46,9 +51,9 @@
 					<button  id="btn_004" class="button danger separate-button fix-button" data-bind="click: function(){$parent.viewmodelL.deleteEmploymentSet($parent.viewmodelL);}" >#{i18n.getText('KAF022_275')}</button>
 				</com:ko-if>
 				<com:ko-if bind="currentTab()==='m'">
-					<button  id="btn_001" class="button separate-button fix-button"  data-bind="">#{i18n.getText('KAF022_1')}</button>
-					<button  id="btn_002" class="button proceed separate-button fix-button" data-bind="">#{i18n.getText('KAF022_274')}</button>
-					<button  id="btn_004" class="button danger separate-button fix-button" data-bind="" >#{i18n.getText('KAF022_275')}</button>
+					<button  id="btn_001" class="button separate-button fix-button"  data-bind="click: $parent.viewModelM.update">#{i18n.getText('KAF022_1')}</button>
+					<button  id="btn_002" class="button proceed separate-button fix-button" data-bind="click: $parent.viewModelM.openDialogCopy, enable: $parent.viewModelM.isUpdateMode">#{i18n.getText('KAF022_274')}</button>
+					<button  id="btn_004" class="button danger separate-button fix-button" data-bind="click: $parent.viewModelM.remove, enable: $parent.viewModelM.isUpdateMode" >#{i18n.getText('KAF022_275')}</button>
 				</com:ko-if>
 			</div>
 			<div id="tabpanel-a" role="tabpanel" class="screen-a"
@@ -2036,7 +2041,7 @@
 			<div id="tabpanel-l" role="tabpanel" class="screen-l" data-bind="with: viewmodelL">
 				<ui:include src="../l/index.xhtml" />
 			</div>
-			<div id="tabpanel-m" role="tabpanel" class="screen-m" data-bind="">
+			<div id="tabpanel-m" role="tabpanel" class="screen-m" data-bind="with: viewModelM">
 				<ui:include src="../m/index.xhtml" />
 			</div>
 		</ui:define>
