--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/common/error/sessiontimeout/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/common/error/sessiontimeout/index.xhtml
@@ -5,13 +5,13 @@
 	xmlns:com="http://xmlns.jcp.org/jsf/component"
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 <body>
-	<ui:composition template="/master/noheader.xhtml">
+	<ui:composition template="/master/freelayout.xhtml">
 		<ui:define name="htmlHead">
 			<title></title>
 			<com:scriptfile set="IGNITE" />
 
 			<com:stylefile path="../common.error.style.css" />
-			<com:scriptfile path="../common.error.start.js" />
+			<com:scriptfile path="sessiontimeout.start.js" />
 		</ui:define>
 
 		<ui:define name="content">
