kaf022: update UI

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
@@ -9,6 +9,7 @@
 		<ui:define name="sidebar-head">
 			<script>var dialogSize = { width: 1200, height: 800 };</script>
 			<com:scriptfile set="IGNITE" />
+			<com:scriptfile path="/view/kcp/share/tree.js" of="/nts.uk.com.web"/>
 			<com:stylefile path="kaf022.a.main.css" />
 			<com:stylefile path="../l/kaf022.l.main.css" />
 			<!-- <com:stylefile path="../e/kmf004.e.main.css" /> -->
@@ -51,9 +52,9 @@
 					<button  id="btn_004" class="button danger separate-button fix-button" data-bind="click: function(){$parent.viewmodelL.deleteEmploymentSet($parent.viewmodelL);}" >#{i18n.getText('KAF022_275')}</button>
 				</com:ko-if>
 				<com:ko-if bind="currentTab()==='m'">
-					<button  id="btn_001" class="button separate-button fix-button"  data-bind="click: $parent.viewModelM.update">#{i18n.getText('KAF022_1')}</button>
-					<button  id="btn_002" class="button proceed separate-button fix-button" data-bind="click: $parent.viewModelM.openDialogCopy, enable: $parent.viewModelM.isUpdateMode">#{i18n.getText('KAF022_274')}</button>
-					<button  id="btn_004" class="button danger separate-button fix-button" data-bind="click: $parent.viewModelM.remove, enable: $parent.viewModelM.isUpdateMode" >#{i18n.getText('KAF022_275')}</button>
+					<button  id="btn_001" class="button separate-button fix-button"  data-bind="click: $parent.viewmodelM.update">#{i18n.getText('KAF022_1')}</button>
+					<button  id="btn_002" class="button proceed separate-button fix-button" data-bind="click: $parent.viewmodelM.openDialogCopy, enable: $parent.viewmodelM.isUpdateMode">#{i18n.getText('KAF022_274')}</button>
+					<button  id="btn_004" class="button danger separate-button fix-button" data-bind="click: $parent.viewmodelM.remove, enable: $parent.viewmodelM.isUpdateMode" >#{i18n.getText('KAF022_275')}</button>
 				</com:ko-if>
 			</div>
 			<div id="tabpanel-a" role="tabpanel" class="screen-a"
@@ -2041,7 +2042,7 @@
 			<div id="tabpanel-l" role="tabpanel" class="screen-l" data-bind="with: viewmodelL">
 				<ui:include src="../l/index.xhtml" />
 			</div>
-			<div id="tabpanel-m" role="tabpanel" class="screen-m" data-bind="with: viewModelM">
+			<div id="tabpanel-m" role="tabpanel" class="screen-m" data-bind="with: viewmodelM">
 				<ui:include src="../m/index.xhtml" />
 			</div>
 		</ui:define>
