--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/m/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/m/index.xhtml
@@ -33,7 +33,7 @@
 					<td class="color-header"><span class="label">#{i18n.getText('KAF022_3')}</span></td>
 					<td>
 						<div data-bind="ntsRadioBoxGroup: {
-							options: $root.content.viewModelM.enumUseAtr,
+							options: $root.content.viewmodelM.enumUseAtr,
 							optionsValue: 'code',
 							optionsText: 'name',
 							value: $data.useAtr,
@@ -42,7 +42,7 @@
 					</td>
 					<td>
 						<div data-bind="ntsRadioBoxGroup: {
-							options: $root.content.viewModelM.prerequisiteUseAtr,
+							options: $root.content.viewmodelM.prerequisiteUseAtr,
 							optionsValue: 'code',
 							optionsText: 'name',
 							value: $data.prerequisiteForpauseFlg,
@@ -50,7 +50,7 @@
 					</td>
 					<td>
 						<div data-bind="ntsRadioBoxGroup: {
-							options: $root.content.viewModelM.timeCalculationUseAtr,
+							options: $root.content.viewmodelM.timeCalculationUseAtr,
 							optionsValue: 'code',
 							optionsText: 'name',
 							value: $data.timeCalUseAtr,
@@ -59,13 +59,13 @@
 						<div data-bind="ntsCheckBox: { checked: $data.goOutTimeBeginDisFlg, enable: $data.timeCalUseAtr() == 1 }">#{i18n.getText('KAF022_298')}</div><br/>
 						<span>#{i18n.getText('KAF022_299')}</span><br/>
 						<div style="margin-left: 5px;" data-bind="ntsRadioBoxGroup: {
-							options: $root.content.viewModelM.atWorkAtr,
+							options: $root.content.viewmodelM.atWorkAtr,
 							optionsValue: 'code',
 							optionsText: 'name',
 							value: $data.atworkTimeBeginDisFlg,
 							enable: $data.timeCalUseAtr() == 1}"></div><br/>
 						<div data-bind="ntsRadioBoxGroup: {
-						options: $root.content.viewModelM.timeInputUseAtr,
+						options: $root.content.viewmodelM.timeInputUseAtr,
 						optionsValue: 'code',
 						optionsText: 'name',
 						value: $data.timeInputUseAtr,
@@ -80,7 +80,7 @@
 					<td class="color-header"><span class="label">#{i18n.getText('KAF022_4')}</span></td>
 					<td>
 						<div data-bind="ntsRadioBoxGroup: {
-							options: $root.content.viewModelM.enumUseAtr,
+							options: $root.content.viewmodelM.enumUseAtr,
 							optionsValue: 'code',
 							optionsText: 'name',
 							value: $data.useAtr,
@@ -97,7 +97,7 @@
 					<td class="color-header"><span class="label">#{i18n.getText('KAF022_5')}</span></td>
 					<td>
 						<div data-bind="ntsRadioBoxGroup: {
-							options: $root.content.viewModelM.enumUseAtr,
+							options: $root.content.viewmodelM.enumUseAtr,
 							optionsValue: 'code',
 							optionsText: 'name',
 							value: $data.useAtr,
@@ -114,7 +114,7 @@
 					<td class="color-header"><span class="label">#{i18n.getText('KAF022_6')}</span></td>
 					<td>
 						<div data-bind="ntsRadioBoxGroup: {
-							options: $root.content.viewModelM.enumUseAtr,
+							options: $root.content.viewmodelM.enumUseAtr,
 							optionsValue: 'code',
 							optionsText: 'name',
 							value: $data.useAtr,
@@ -131,7 +131,7 @@
 					<td class="color-header"><span class="label">#{i18n.getText('KAF022_7')}</span></td>
 					<td>
 						<div data-bind="ntsRadioBoxGroup: {
-							options: $root.content.viewModelM.enumUseAtr,
+							options: $root.content.viewmodelM.enumUseAtr,
 							optionsValue: 'code',
 							optionsText: 'name',
 							value: $data.useAtr,
@@ -148,7 +148,7 @@
 					<td class="color-header"><span class="label">#{i18n.getText('KAF022_8')}</span></td>
 					<td>
 						<div data-bind="ntsRadioBoxGroup: {
-							options: $root.content.viewModelM.enumUseAtr,
+							options: $root.content.viewmodelM.enumUseAtr,
 							optionsValue: 'code',
 							optionsText: 'name',
 							value: $data.useAtr,
@@ -157,7 +157,7 @@
 					</td>
 					<td>
 						<div data-bind="ntsRadioBoxGroup: {
-							options: $root.content.viewModelM.prerequisiteUseAtr,
+							options: $root.content.viewmodelM.prerequisiteUseAtr,
 							optionsValue: 'code',
 							optionsText: 'name',
 							value: $data.prerequisiteForpauseFlg,
@@ -165,7 +165,7 @@
 					</td>
 					<td>
 						<div data-bind="ntsRadioBoxGroup: {
-							options: $root.content.viewModelM.timeCalculationUseAtr,
+							options: $root.content.viewmodelM.timeCalculationUseAtr,
 							optionsValue: 'code',
 							optionsText: 'name',
 							value: $data.timeCalUseAtr,
@@ -174,13 +174,13 @@
 						<div data-bind="ntsCheckBox: { checked: $data.goOutTimeBeginDisFlg, enable: $data.timeCalUseAtr() == 1 }">#{i18n.getText('KAF022_298')}</div><br/>
 						<span>#{i18n.getText('KAF022_299')}</span><br/>
 						<div style="margin-left: 5px;" data-bind="ntsRadioBoxGroup: {
-							options: $root.content.viewModelM.atWorkAtr,
+							options: $root.content.viewmodelM.atWorkAtr,
 							optionsValue: 'code',
 							optionsText: 'name',
 							value: $data.atworkTimeBeginDisFlg,
 							enable: $data.timeCalUseAtr() == 1}"></div><br/>
 						<div data-bind="ntsRadioBoxGroup: {
-						options: $root.content.viewModelM.timeInputUseAtr,
+						options: $root.content.viewmodelM.timeInputUseAtr,
 						optionsValue: 'code',
 						optionsText: 'name',
 						value: $data.timeInputUseAtr,
@@ -195,7 +195,7 @@
 					<td class="color-header"><span class="label">#{i18n.getText('KAF022_9')}</span></td>
 					<td>
 						<div data-bind="ntsRadioBoxGroup: {
-							options: $root.content.viewModelM.enumUseAtr,
+							options: $root.content.viewmodelM.enumUseAtr,
 							optionsValue: 'code',
 							optionsText: 'name',
 							value: $data.useAtr,
@@ -204,7 +204,7 @@
 					<td></td>
 					<td>
 						<div data-bind="ntsRadioBoxGroup: {
-							options: $root.content.viewModelM.timeCalculationUseAtr,
+							options: $root.content.viewmodelM.timeCalculationUseAtr,
 							optionsValue: 'code',
 							optionsText: 'name',
 							value: $data.timeCalUseAtr,
@@ -219,7 +219,7 @@
 					<td class="color-header"><span class="label">#{i18n.getText('KAF022_286')}</span></td>
 					<td>
 						<div data-bind="ntsRadioBoxGroup: {
-							options: $root.content.viewModelM.enumUseAtr,
+							options: $root.content.viewmodelM.enumUseAtr,
 							optionsValue: 'code',
 							optionsText: 'name',
 							value: $data.useAtr,
@@ -228,13 +228,13 @@
 					<td></td>
 					<td>
 						<div data-bind="ntsRadioBoxGroup: {
-							options: $root.content.viewModelM.lateOrLeaveAppCancelAtr,
+							options: $root.content.viewmodelM.lateOrLeaveAppCancelAtr,
 							optionsValue: 'code',
 							optionsText: 'name',
 							value: $data.lateOrLeaveAppCancelFlg,
 							enable: true}"></div><br/>
 						<div data-bind="ntsRadioBoxGroup: {
-							options: $root.content.viewModelM.lateOrLeaveAppSettingAtr,
+							options: $root.content.viewmodelM.lateOrLeaveAppSettingAtr,
 							optionsValue: 'code',
 							optionsText: 'name',
 							value: $data.lateOrLeaveAppSettingFlg,
@@ -249,7 +249,7 @@
 					<td class="color-header"><span class="label">#{i18n.getText('KAF022_11')}</span></td>
 					<td>
 						<div data-bind="ntsRadioBoxGroup: {
-							options: $root.content.viewModelM.enumUseAtr,
+							options: $root.content.viewmodelM.enumUseAtr,
 							optionsValue: 'code',
 							optionsText: 'name',
 							value: $data.useAtr,
@@ -266,7 +266,7 @@
 					<td class="color-header"><span class="label">#{i18n.getText('KAF022_12')}</span></td>
 					<td>
 						<div data-bind="ntsRadioBoxGroup: {
-							options: $root.content.viewModelM.enumUseAtr,
+							options: $root.content.viewmodelM.enumUseAtr,
 							optionsValue: 'code',
 							optionsText: 'name',
 							value: $data.useAtr,
@@ -283,7 +283,7 @@
 					<td class="color-header"><span class="label">#{i18n.getText('KAF022_13')}</span></td>
 					<td>
 						<div data-bind="ntsRadioBoxGroup: {
-							options: $root.content.viewModelM.enumUseAtr,
+							options: $root.content.viewmodelM.enumUseAtr,
 							optionsValue: 'code',
 							optionsText: 'name',
 							value: $data.useAtr,
