fix bug kmk 008

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/008/g/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/008/g/index.xhtml
@@ -62,7 +62,7 @@
 									height: 250,
 									dataSource: items2,
 									primaryKey: 'code',
-									columns: columns,
+									columns: columns2,
 									multiple: false,
 									value: currentCode
 								}"></table>
