--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksc/001/b/c.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksc/001/b/c.xhtml
@@ -6,6 +6,11 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 <body>
 	<ui:composition>
+		<com:EnumScript>
+			nts.uk.ctx.at.schedule.dom.executionlog.ReCreateAtr
+			nts.uk.ctx.at.schedule.dom.executionlog.ProcessExecutionAtr
+		</com:EnumScript>
+		
 		<div class="contentC">
 			<div tabindex="-1">
 				<label tabindex="-1">#{i18n.getText('KSC001_2')}</label>
@@ -28,24 +33,23 @@
 			</div>
 			<div class="selectionCase" tabindex="-1">
 				<div class="radioboxCase" >
-					<div tabindex="3" id="inputCheckReCreateBox" 
-						data-bind="ntsRadioButton: {checked: checkReCreateAtrAllCase, 
-						name: '#[KSC001_82]', enable: isReCreate, optionText: '#{i18n.getText('KSC001_4')}' }" />
+					<div tabindex = "3" id="inputCheckReCreateBox" 
+						data-bind="ntsRadioButton: { checked: checkReCreateAtrAllCase, enable: isReCreate, option: lstReCreate()[0], name: '#[KSC001_82]', optionValue: 'value', optionText: 'name', group: 'KSC001_82'}" />
 				</div>
 				<div class="radioboxCase" >
-					<div tabindex="3" data-bind="ntsRadioButton: {checked: checkReCreateAtrOnlyUnConfirm, name: '#[KSC001_82]', 
-						enable: isReCreate, optionText: '#{i18n.getText('KSC001_5')}' }" />
+					<div tabindex = "3" 
+						data-bind="ntsRadioButton: { checked: checkReCreateAtrAllCase, enable: isReCreate, option: lstReCreate()[1], name: '#[KSC001_82]', optionValue: 'value', optionText: 'name', group: 'KSC001_82'}" />
 				</div>	
 				<div class="radioboxCase"  tabindex="-1">
 					<label>#{i18n.getText('KSC001_6')}</label>
 				</div>
 				<div class="radioboxProcessExecutionAtr"  >
-					<div tabindex="4" data-bind="ntsRadioButton: {checked: checkProcessExecutionAtrRebuild, 
-						name: '#[KSC001_83]', enable: isReCreate, optionText: '#{i18n.getText('KSC001_7')}' }" />
+					<div tabindex = "4" 
+						data-bind="ntsRadioButton: { checked: checkProcessExecutionAtrRebuild, enable: isReCreate, option: lstProcessExecution()[0], name: '#[KSC001_83]', optionValue: 'value', optionText: 'name', group: 'KSC001_83'}" />
 				</div>
 				<div class="radioboxProcessExecutionAtr" >
-					<div tabindex="4" data-bind="ntsRadioButton: {checked: checkProcessExecutionAtrReconfig, 
-						name: '#[KSC001_83]', enable: isReCreate, optionText: '#{i18n.getText('KSC001_8')}' }" />
+					<div tabindex = "4" 
+						data-bind="ntsRadioButton: { checked: checkProcessExecutionAtrRebuild, enable: isReCreate, option: lstProcessExecution()[1], name: '#[KSC001_83]', optionValue: 'value', optionText: 'name', group: 'KSC001_83'}" />
 				</div>	
 				
 				<div class="checkboxSetting" tabindex="-1">
