--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/004/d/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/004/d/index.xhtml
@@ -32,6 +32,7 @@
 										valueFormat: 'YYYYMM',
 										required: true, 
 										value: dateValue,
+										maxRange: 'oneYear',
 										type:'yearmonth'}"></div>
 								</div>
 							</td>
