kmk003 fix after rest

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a5/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a5/index.xhtml
@@ -143,7 +143,7 @@
 											option: {textalign: 'center'},
 											constraint: 'AttendanceTime',
 											value: hereAfterRestSet.flowPassageTime,
-											required: true,
+											required: false,
 											inputFormat: 'time',
 											mode: 'time',
 											enable: useHereAfterRestSet }" />
@@ -154,7 +154,7 @@
 											option: {textalign: 'center'},
 											constraint: 'AttendanceTime',
 											value: hereAfterRestSet.flowRestTime,
-											required: true,
+											required: false,
 											inputFormat: 'time',
 											mode: 'time',
 											enable: useHereAfterRestSet }" />
@@ -193,7 +193,7 @@
 											option: {textalign: 'center'},
 											constraint: 'AttendanceTime',
 											value: hereAfterRestSet.flowPassageTime,
-											required: true,
+											required: false,
 											inputFormat: 'time',
 											mode: 'time',
 											enable: useHereAfterRestSet }" />
@@ -204,7 +204,7 @@
 											option: {textalign: 'center'},
 											constraint: 'AttendanceTime',
 											value: hereAfterRestSet.flowRestTime,
-											required: true,
+											required: false,
 											inputFormat: 'time',
 											mode: 'time',
 											enable: useHereAfterRestSet }" />
@@ -240,7 +240,7 @@
 												option: {textalign: 'center'},
 												constraint: 'AttendanceTime',
 												value: hereAfterRestSet.flowPassageTime,
-												required: true,
+												required: false,
 												inputFormat: 'time',
 												mode: 'time',
 												enable: useHereAfterRestSet }" />
@@ -251,7 +251,7 @@
 												option: {textalign: 'center'},
 												constraint: 'AttendanceTime',
 												value: hereAfterRestSet.flowRestTime,
-												required: true,
+												required: false,
 												inputFormat: 'time',
 												mode: 'time',
 												enable: useHereAfterRestSet }" />
@@ -286,7 +286,7 @@
 												option: {textalign: 'center'},
 												constraint: 'AttendanceTime',
 												value: hereAfterRestSet.flowPassageTime,
-												required: true,
+												required: false,
 												inputFormat: 'time',
 												mode: 'time',
 												enable: useHereAfterRestSet }" />
@@ -297,7 +297,7 @@
 												option: {textalign: 'center'},
 												constraint: 'AttendanceTime',
 												value: hereAfterRestSet.flowRestTime,
-												required: true,
+												required: false,
 												inputFormat: 'time',
 												mode: 'time',
 												enable: useHereAfterRestSet }" />
@@ -341,7 +341,7 @@
 								option: {textalign: 'center'},
 								constraint: 'AttendanceTime',
 								value: hereAfterRestSet.flowPassageTime,
-								required: true,
+								required: false,
 								inputFormat: 'time',
 								mode: 'time',
 								enable: useHereAfterRestSet }" />
@@ -352,7 +352,7 @@
 								option: {textalign: 'center'},
 								constraint: 'AttendanceTime',
 								value: hereAfterRestSet.flowRestTime,
-								required: true,
+								required: false,
 								inputFormat: 'time',
 								mode: 'time',
 								enable: useHereAfterRestSet }" />
