--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/007/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/007/b/index.xhtml
@@ -45,7 +45,11 @@
 						</tr>
 						<tr tabindex="-1">
 							<td class="bg-green titleScheduleSetting" >#{i18n.getText('KSU007_11')}</td>
-							<td class="valueScheduleSetting" data-bind="text: executionTotal"></td>
+							<td class="valueScheduleSetting">
+								<span data-bind="text: executionTotal"></span>
+								<span>#{i18n.getText('KSU007_12')}</span>
+								<span data-bind="text: executionError"></span>
+							</td>
 						</tr>
 					</table>
 					<com:ko tag="if" bind="isError()">
