--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/021/a/style.css
@@ -25,7 +25,10 @@
  	height: 600px; 
 }
 .reference-date {
-	padding: 28px;
+	padding-left: 28px;
+	padding-top: 24px;
+	padding-right: 28px;
+	padding-bottom: 5px;
 }
 
 .reference-date .form-label {
@@ -34,7 +37,7 @@
 
 .switch-button {
 	padding-left: 28px;
-	padding-bottom: 28px;
+	padding-bottom: 18px;
 }
 
 #switch-use {
