Fix bug ccg007 #87904

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/b/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/b/index.xhtml
@@ -38,7 +38,8 @@
 											required: false,
 											option: {textmode: 'text',width: '222px'}, 
 											enable: true,
-											readonly: false}" />
+											readonly: false,
+											enterkey: submitLogin}" />
 								</div></td>
 						</tr>
 						<tr>
@@ -55,7 +56,9 @@
 											required: false,
 											option: {textmode: 'password',width: '222px'},
 											enable: true,
-											readonly: false}, valueUpdate: 'afterkeydown'" />
+											readonly: false,
+											enterkey: submitLogin
+											}, valueUpdate: 'afterkeydown'" />
 								</div></td>
 						</tr>
 						<tr>
