--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/c/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/c/index.xhtml
@@ -36,7 +36,8 @@
 										required: false,
 										option: {textmode: 'text',width: '50px'},
 										enable: true,
-										readonly: false}" />
+										readonly: false,
+										enterkey: submitLogin}" />
 								</div></td>
 							<td><img alt="" src="26.png" /></td>
 							<td class="pad_5"><div>
@@ -47,7 +48,8 @@
 										option: {textmode: 'text',width: '100px'},
 										required: false,
 										enable: true,
-										readonly: false}" />
+										readonly: false,
+										enterkey: submitLogin}" />
 								</div></td>
 						</tr>
 						<tr>
@@ -64,7 +66,8 @@
 										required: false,
 										option: {textmode: 'password',width: '230px'},
 										enable: true,
-										readonly: false}" />
+										readonly: false,
+										enterkey: submitLogin}" />
 								</div></td>
 						</tr>
 						<tr>
