--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/d/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/007/d/index.xhtml
@@ -51,7 +51,8 @@
 										required: false,
 										option: {textmode: 'text',width: '230px'},
 										enable: true,
-										readonly: false}" />
+										readonly: false,
+										enterkey: submitLogin}" />
 								</div></td>
 						</tr>
 						<tr>
@@ -65,7 +66,8 @@
 										required: false,
 										option: {textmode: 'password',width: '230px'},
 										enable: true,
-										readonly: false}" />
+										readonly: false,
+										enterkey: submitLogin}" />
 								</div></td>
 						</tr>
 						<tr>
