--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/004/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/004/b/index.xhtml
@@ -52,7 +52,7 @@
 					<div class="valign-center control-group" style="display: inline-flex;">
 						<div  data-bind="ntsFormLabel: {  required: false }" id ='lblApplicantName' class="leftWidth">#{i18n.getText('KAF004_11')}</div>
 <!-- 						<label data-bind = "text: applicantName"></label> -->
-						<div id = "applicationName" data-bind = "text: applicantName" style = "margin-top: 8px"></div>
+						<div id = "applicationName" data-bind = "text: applicantName" style = "margin-top: 8px; margin-left: 3px;"></div>
 					</div>					
 					<com:ko-if bind="showScreen == 'B'">
 						<div class="valign-center control-group">
@@ -64,16 +64,16 @@
 															required: true,
 															name: '#[KAF004_41]' }"></div>
 						</div>
-						<div class="valign-center control-group">
+						<div class="valign-center control-group ">
 							<div lbl = 'lblLate1B' class = 'leftWidth' data-bind="ntsFormLabel: {  required: true }">#{i18n.getText('KAF004_13')}</div>
-							<div data-bind="ntsCheckBox: { checked: late1 }">#{i18n.getText('KAF004_14')}</div>
+							<div data-bind="ntsCheckBox: { checked: late1 }" style = "margin-left: -5px;">#{i18n.getText('KAF004_14')}</div>
 							<input id ="inpLate1"
 								data-bind="ntsTimeEditor: {value: lateTime1, 
 															inputFormat: 'time',
 															mode: 'time' , 
 															required: late1,
 															name:'#[KAF004_42]'}" />
-							<div style = "margin-left: 32px" data-bind="ntsCheckBox: { checked: early1 }">#{i18n.getText('KAF004_15')}</div>
+							<div style = "margin-left: 31px" data-bind="ntsCheckBox: { checked: early1 }">#{i18n.getText('KAF004_15')}</div>
 							<input id = "inpEarlyTime1"
 								data-bind="ntsTimeEditor: {value: earlyTime1, 
 															inputFormat: 'time',
@@ -90,7 +90,7 @@
 															   mode: 'time' ,
 															   required: late2,
 															   name: '#[KAF004_50]'}" />
-								<div data-bind="ntsCheckBox: { checked: early2 }" style="margin-left: 35px;" >#{i18n.getText('KAF004_33')}</div>
+								<div data-bind="ntsCheckBox: { checked: early2 }" style="margin-left: 31px;" >#{i18n.getText('KAF004_33')}</div>
 								<input class="col2" id = "inpEarlyTime2"
 									data-bind="ntsTimeEditor: {value: earlyTime2, 
 																inputFormat: 'time',
@@ -150,12 +150,12 @@
 								data-bind="ntsDatePicker: {value: date, dateFormat: 'YYYY/MM/DD'}"></div>
 						</div>
 						<div class="valign-center control-group">
-							<div class = "leftWidth" id ="lblFixTimeD1" data-bind="ntsFormLabel: {  required: true }">#{i18n.getText('KAF004_13')}</div>
+							<div class = "leftWidth" id ="lblFixTimeD1" data-bind="ntsFormLabel: {  required: true }" style ="margin-left: -1px;" >#{i18n.getText('KAF004_13')}</div>
 							<label id ="lblTime1">#{i18n.getText('KAF004_21')}</label>
 							<label id="inpTime1" style="margin-left: 15px; margin-right: 15px;" data-bind= "text: fixtime1"></label>
 						</div>
 						<div class="valign-center control-group row">
-							<label id = 'lblFixtime2' class = 'clsCheckbox'>#{i18n.getText('KAF004_22')}</label>
+							<label id = 'lblFixtime2' style = 'margin-left: 149px;'>#{i18n.getText('KAF004_22')}</label>
 							<!-- 	fix cứng time -->
 							<label style="margin-left: 15px; margin-right: 15px;" data-bind= "text: fixtime2"></label>
 						</div>
